add data-atribut to Charisma

--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -129,7 +129,7 @@
                                 <input type="number" min="0" max="20" name="Charismascore" placeholder="10" class="stat"/>
                             </div>
                             <div class="modifier">
-                                <div class="statmod">+0</div>
+                                <div class="statmod" data-modifier="cha">+0</div>
                             </div>
                         </li>
                     </ul>
