set value next to checkbox

--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -84,7 +84,7 @@
                                 <input type="number" min="0" max="20" name="Strengthscore" placeholder="10" class="stat"/>
                             </div>
                             <div class="modifier">
-                                <div class="statmod" data-modifier="str">+0</div>
+                                <div class="statmod" data-modifier="str" id="str">+0</div>
                             </div>
                         </li>
                         <li>
@@ -93,7 +93,7 @@
                                 <input type="number" min="0" max="20" name="Dexterityscore" id="dexter" placeholder="10" class="stat"/>
                             </div>
                             <div class="modifier">
-                                <div class="statmod" data-modifier="dex">+0</div>
+                                <div class="statmod" data-modifier="dex" id="dex">+0</div>
                             </div>
                         </li>
                         <li>
@@ -102,7 +102,7 @@
                                 <input type="number" min="0" max="20" name="Constitutionscore" placeholder="10" class="stat"/>
                             </div>
                             <div class="modifier">
-                                <div class="statmod" data-modifier="con">+0</div>
+                                <div class="statmod" data-modifier="con" id="con">+0</div>
                             </div>
                         </li>
                         <li>
@@ -111,7 +111,7 @@
                                 <input type="number" min="0" max="20" name="Wisdomscore" id="wisdom" placeholder="10" class="stat"/>
                             </div>
                             <div class="modifier">
-                                <div class="statmod" data-modifier="wis">+0</div>
+                                <div class="statmod" data-modifier="wis" id="wis">+0</div>
                             </div>
                         </li>
                         <li>
@@ -120,7 +120,7 @@
                                 <input type="number" min="0" max="20" name="Intelligencescore" placeholder="10" class="stat"/>
                             </div>
                             <div class="modifier">
-                                <div class="statmod" data-modifier="int">+0</div>
+                                <div class="statmod" data-modifier="int" id="int">+0</div>
                             </div>
                         </li>
                         <li>
@@ -129,7 +129,7 @@
                                 <input type="number" min="0" max="20" name="Charismascore" placeholder="10" class="stat"/>
                             </div>
                             <div class="modifier">
-                                <div class="statmod" data-modifier="cha">+0</div>
+                                <div class="statmod" data-modifier="cha" id="cha">+0</div>
                             </div>
                         </li>
                     </ul>
@@ -152,7 +152,7 @@
                             <li>
                                 <label>Strength</label>
                                 <div class="str">+0</div>
-                                <input name="Strength-save-prof" type="checkbox" class="add-profBonus"/>
+                                <input name="Strength-save-prof" type="checkbox" class="add-profBonus" id="test"/>
                             </li>
                             <li>
                                 <label>Dexterity</label>
