--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -362,16 +362,16 @@
                         </div>
                         <div class="marks">
                             <div class="deathsuccesses">
-                                <label for="ize">Success</label>
-                                <div id="ize" class="bubbles">
+                                <label>Success</label>
+                                <div class="bubbles">
                                     <input name="deathsuccess1" type="checkbox"/>
                                     <input name="deathsuccess2" type="checkbox"/>
                                     <input name="deathsuccess3" type="checkbox"/>
                                 </div>
                             </div>
                             <div class="deathfails">
-                                <label for="mize">Failure</label>
-                                <div id="mize" class="bubbles">
+                                <label>Failure</label>
+                                <div class="bubbles">
                                     <input name="deathfail1" type="checkbox"/>
                                     <input name="deathfail2" type="checkbox"/>
                                     <input name="deathfail3" type="checkbox"/>
